# sync-storage-prototype

./: .gitignore  README.md
android/Toodle/app/src/main/java/com/mozilla/toodle/: Item.java  ListAdapter.java  ToodleActivity.java  UiUtils.java
android/Toodle/app/src/main/java/com/mozilla/toodle/rust/: JNA.java  ListManager.java  NativeItem.java  NativeItemSet.java  NativeItemsCallback.java  NativeResult.java  NativeResultException.java  Toodle.java
android/Toodle/app/src/main/res/layout/: item.xml
android/Toodle/app/src/main/res/values/: strings.xml
complex/cargo/list/: Cargo.toml
complex/cargo/list/src/: items.rs  labels.rs  lib.rs
complex/cargo/store/: Cargo.toml
complex/cargo/store/src/: lib.rs
complex/ios/Toodle.xcodeproj/: project.pbxproj
complex/rust/: Cargo.toml
complex/rust/list/: Cargo.toml
complex/rust/list/src/: errors.rs  lib.rs
complex/rust/store/: Cargo.toml
complex/rust/store/src/: lib.rs
ios/Toodle/: AppDelegate.swift
ios/Toodle.xcodeproj/: project.pbxproj
ios/Toodle/Controllers/: ItemViewController.swift  ToDoListItemsTableViewController.swift  ToDoListLabelsViewController.swift
ios/Toodle/Rust/: ToodleLib.swift
ios/Toodle/Rust/List/Items/: Item.swift
rust/: Cargo.toml  android_build_all.sh  items.h  labels.h
rust/ffi-utils/: Cargo.toml
rust/ffi-utils/src/: lib.rs
rust/list/src/: ctypes.rs  items.rs  lib.rs
rust/src/: ctypes.rs  items.rs  labels.rs  lib.rs  toodle.h
rust/store/: Cargo.toml
rust/store/src/: lib.rs
rust/toodle_ffi/: Cargo.toml  items.h  labels.h  toodle.h
rust/toodle_ffi/src/: ctypes.rs  lib.rs
webextension/: .eslintrc.js  .gitignore  package-lock.json  package.json  webpack.config.js
webextension/extension/: background.js  index.html  manifest.json
webextension/src/: index.js
webextension/src/actions/: fake_api.js  index.js
webextension/src/components/: AddLabel.css  AddLabel.js  AddTodo.css  AddTodo.js  App.css  App.js  DatesChooser.css  DatesChooser.js  LabelsChooser.css  LabelsChooser.js  LabelsEditor.css  LabelsEditor.js  Todo.css  Todo.js  TodoDropdownMenu.css  TodoDropdownMenu.js  TodoList.css  TodoList.js
webextension/src/reducers/: index.js  labels.js  todos.js
