[package]
name = "toodle"
version = "0.1.0"
authors = ["Emily Toop <etoop@mozilla.com>"]
description = "Cross Platform Library for providing To Do List data"

[workspace]
members = ["toodle_ffi"]

[dependencies]
error-chain = { git = "https://github.com/rnewman/error-chain", branch = "rnewman/sync" }
libc = "0.2.32"
time = "0.1.38"
uuid = { version = "0.5", features = ["v4"] }

[dependencies.edn]
git = "https://github.com/mozilla/mentat.git"
branch = "master"

[dependencies.mentat]
git = "https://github.com/mozilla/mentat.git"
branch = "master"

[dependencies.mentat_core]
git = "https://github.com/mozilla/mentat.git"
branch = "master"

[dependencies.store]
path = "store"

[dependencies.rusqlite]
version = "0.12"
# System sqlite might be very old.
features = ["bundled", "limits"]
